# bosch-assignment

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
artifacts/: baseline_front_arc_full.json  bench10_all.json  bench10_endpoint.json  bench10_front.json  bench10_front_arc.json  bench10_front_arc_b4.json  bench10_front_arc_v2.json  bench10_front_arc_v3.json  bench10_openai_chat.json  comparison.json  consolidation_smoke.json  envonly_smoke.json  finetuned_lr1e4_front_arc_full.json  finetuned_lr5e4_front_arc_full.json  finetuned_natural1024_front_arc_full.json  finetuned_prop_lr1e4_front_arc_full.json  finetuned_stratified_front_arc_full.json  qualitative_examples.json  qualitative_lora_vs_base.json  qwen_all_smoke_results.json  qwen_baseline_results.json  qwen_smoke_results.json  refactor_smoke_baseline.json  refactor_smoke_lora.json
src/: config.py  qwen.py  vllm_launcher.py
src/data/: download_drivelm.py  pipeline.py
src/eval/: benchmark.py  benchmark_endpoint.py  eval.py  evaluate_finetuned.py
src/serve/: __init__.py  qwen.py  vllm_server.py
src/train/: README.md  finetune.py
