[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drivelm-systems"
version = "0.1.0"
description = "Benchmarking, fine-tuning, and serving toolkit for DriveLM on nuScenes-mini"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Pranav Thombare" }
]
dependencies = [
  "accelerate>=0.34.0",
  "bitsandbytes>=0.43.3; platform_system == 'Linux'",
  "datasets>=2.21.0",
  "httpx>=0.27.2",
  "matplotlib>=3.9.2",
  "numpy>=1.26.4",
  "orjson>=3.10.7",
  "pandas>=2.2.2",
  "peft>=0.12.0",
  "Pillow>=10.4.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "rouge-score>=0.1.2",
  "scikit-learn>=1.5.1",
  "seaborn>=0.13.2",
  "torch>=2.4.0",
  "transformers @ git+https://github.com/huggingface/transformers.git@main",
  "trl>=0.10.1",
  "httpx>=0.27.2",
  "openai>=1.50.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.2"
]
analysis = [
  "nuscenes-devkit>=1.1.11"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
